# HR_Agent

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  resume.db
src/graph/: sqlgraph.py
src/llms/: groqllm.py
src/nodes/: sql_nodes.py
src/prompts/: sys_msg.py
src/sqlData/: data.py  resume.db
src/state/: sqlState.py
